<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:contentDescription="@string/background"
		android:scaleType="centerCrop"
		android:src="@drawable/background" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >

		<ImageView
			android:id="@+id/logo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:adjustViewBounds="true"
			android:clickable="true"
			android:contentDescription="@string/logo"
			android:gravity="center"
			android:src="@drawable/logo" />

				
		<TextView
			android:id="@+id/serverTitle"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:ellipsize="marquee"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:gravity="center"
			android:marqueeRepeatLimit="marquee_forever"
			android:scrollHorizontally="true"
			android:singleLine="true"
			android:textColor="#ff8000"
			android:textSize="20dp" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:orientation="horizontal"
			android:weightSum="5" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:gravity="right"
				android:singleLine="true"
				android:text="@string/artist"
				android:textColor="#ff8000"
				android:textSize="20dp" />

			<TextView
				android:id="@+id/artist"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_weight="1"
				android:ellipsize="marquee"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:textColor="#ff8000"
				android:textColorLink="#ff8000"
				android:textSize="20dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:orientation="horizontal"
			android:weightSum="5" >

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="4"
				android:gravity="right"
				android:singleLine="true"
				android:text="@string/title"
				android:textColor="#ff8000"
				android:textSize="20dp" />

			<TextView
				android:id="@+id/title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_weight="1"
				android:ellipsize="marquee"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:textColor="#ff8000"
				android:textColorLink="#ff8000"
				android:textSize="20dp" />

		</LinearLayout>

		

		<ImageButton
			android:id="@+id/togglePlay"
			android:layout_width="65dp"
			android:layout_height="65dp"
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:background="@drawable/play"
			android:contentDescription="@string/toggle" />

		
						<TextView
		    android:id="@+id/timeanddate"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:textColor="#ff8000"
		    android:textSize="30dp"
		    android:text="CLOCK" />
						
						
			<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:layout_weight="1">
			<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:scrollbars="horizontal"
                  android:layout_height="wrap_content">
	<TableLayout
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:id="@+id/scheduleTable" >
	</TableLayout>
	</HorizontalScrollView>
</ScrollView>
	</LinearLayout>

</FrameLayout>